--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
     flex-direction: row;
     justify-content: space-evenly;
 }
+/*Isi menu contact*/
 .profil-profil1{
     border-radius: 50px;
     border: 1px solid;
